<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/motionscene_main">

    <ImageView
        android:id="@+id/red_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/star"
        android:tint="?colorSecondary"
        app:srcCompat="@drawable/ic_star_outline" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:onClick="buttonNextClick"
        android:text="@string/next_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:onClick="buttonPreviousClick"
        android:text="@string/previous_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.motion.widget.MotionLayout>