<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:onClick="buttonNextClick"
        android:text="@string/next_sign" />

    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:onClick="buttonPreviousClick"
        android:text="@string/previous_sign" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motion_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="80dp"
            app:layoutDescription="@xml/motionscene_main4"
            app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">


            <ImageView
                android:id="@+id/background"
                android:layout_width="0dp"
                android:layout_height="1000dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/background" />


            <ImageView
                android:id="@+id/moon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="?colorOnPrimary"
                app:srcCompat="@drawable/ic_moon" />

            <TextView
                android:id="@+id/credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits"
                android:textColor="?colorOnPrimary"
                android:textSize="24sp" />
        </androidx.constraintlayout.motion.widget.MotionLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_text" />
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>